Se solucionaron problemas de test